# ztrack

./: .gitignore  README.md  pyproject.toml
ztrack/: __main__.py  app_info.ini  create_icon.py  data_interface.py  default_settings.py
